Finally getting it all working, updating the comments, readme and cleaning it up a bit