@@ -1,37 +1,13 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java project to get you started.
- * For more details take a look at the Java Quickstart chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.0/userguide/tutorial_java_projects.html
- */
-
-plugins {
-    // Apply the Java and Application plugin to add support for building a CLI application.
-    id 'application'
-}
 
 dependencies {
-    implementation project(':sb-library-one')
 
-}
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-bootRun {
-    doFirst {
-        jvmArgs = [
-                "-Xms512m", "-Xmx512m", "-Xmn512m",
-                '--module-path', classpath.asPath,
-                '--enable-preview'
-        ]
-    }
+    api project(":sb-library-one")
+
 }
 
 bootJar {
     enabled = true
 }
-
-application {
-    // Define the main class for the application.
-    mainClassName = 'com.micks.pmadmin.MainApp'
-}
-
